Re-generate sample project
