# sample/Demo.Api.Generated/Contracts/Files/Parameters/UploadSingleObjectWithFilesAsFormDataParameters.cs
@@ -1,0 +1,34 @@
+﻿using System.CodeDom.Compiler;
+using System.ComponentModel.DataAnnotations;
+using Microsoft.AspNetCore.Mvc;
+
+//------------------------------------------------------------------------------
+// This code was auto-generated by ApiGenerator 1.1.154.0.
+//
+// Changes to this file may cause incorrect behavior and will be lost if
+// the code is regenerated.
+//------------------------------------------------------------------------------
+namespace Demo.Api.Generated.Contracts.Files
+{
+    /// <summary>
+    /// Parameters for operation request.
+    /// Description: Upload files as FormData.
+    /// Operation: UploadSingleObjectWithFilesAsFormData.
+    /// Area: Files.
+    /// </summary>
+    [GeneratedCode("ApiGenerator", "1.1.154.0")]
+    public class UploadSingleObjectWithFilesAsFormDataParameters
+    {
+        [FromForm]
+        [Required]
+        public FilesAsFormDataRequest Request { get; set; }
+
+        /// <summary>
+        /// Converts to string.
+        /// </summary>
+        public override string ToString()
+        {
+            return $"{nameof(Request)}: ({Request})";
+        }
+    }
+}
