# sample/Demo.Api.Generated/Contracts/Files/Results/UploadSingleObjectWithFilesAsFormDataResult.cs
@@ -1,0 +1,40 @@
+﻿using System.CodeDom.Compiler;
+using System.Net;
+using Atc.Rest.Results;
+using Microsoft.AspNetCore.Mvc;
+
+//------------------------------------------------------------------------------
+// This code was auto-generated by ApiGenerator 1.1.154.0.
+//
+// Changes to this file may cause incorrect behavior and will be lost if
+// the code is regenerated.
+//------------------------------------------------------------------------------
+namespace Demo.Api.Generated.Contracts.Files
+{
+    /// <summary>
+    /// Results for operation request.
+    /// Description: Upload files as FormData.
+    /// Operation: UploadSingleObjectWithFilesAsFormData.
+    /// Area: Files.
+    /// </summary>
+    [GeneratedCode("ApiGenerator", "1.1.154.0")]
+    public class UploadSingleObjectWithFilesAsFormDataResult : ResultBase
+    {
+        private UploadSingleObjectWithFilesAsFormDataResult(ActionResult result) : base(result) { }
+
+        /// <summary>
+        /// 200 - Ok response.
+        /// </summary>
+        public static UploadSingleObjectWithFilesAsFormDataResult Ok(string? message = null) => new UploadSingleObjectWithFilesAsFormDataResult(ResultFactory.CreateContentResult(HttpStatusCode.OK, message));
+
+        /// <summary>
+        /// 400 - BadRequest response.
+        /// </summary>
+        public static UploadSingleObjectWithFilesAsFormDataResult BadRequest(string? message = null) => new UploadSingleObjectWithFilesAsFormDataResult(ResultFactory.CreateContentResultWithValidationProblemDetails(HttpStatusCode.BadRequest, message));
+
+        /// <summary>
+        /// Performs an implicit conversion from UploadSingleObjectWithFilesAsFormDataResult to ActionResult.
+        /// </summary>
+        public static implicit operator UploadSingleObjectWithFilesAsFormDataResult(string response) => Ok(response);
+    }
+}
